2008-05-14  Mark Ellis <mark@mpellis.org.uk>

	* check for alternative media card names
	* change to above - no longer check names, look for TEMPORARY
	  attribute on directories in root for attached file systems

2008-04-29  Mark Ellis <mark@mpellis.org.uk>

	* made max_log_level global

2008-04-22  Mark Ellis <mark@mpellis.org.uk>

	* uncommented all uses of CeFindClose(), enclosed in #if instead
	* set owner on 'special' directories
	* made various jobs cancellable

2008-04-21  Mark Ellis <mark@mpellis.org.uk>

	* commented out all uses of CeFindClose(), not implemented
	  yet in rapi2
	* removed unnecessary use of variable open modes
	* fixed move and rename functions

2008-04-18  Mark Ellis <mark@mpellis.org.uk>

	* added etags
	* set all files to be owned by the user
	* close opened find handles
	* added file writing (create, append, replace)
	* added delete, make dir, move, rename
	* added file system info

2008-04-11  Mark Ellis <mark@mpellis.org.uk>

	* fixed display names of virtual Filesystem and Documents
	  directories
	* install icon

2008-04-09  Mark Ellis <mark@mpellis.org.uk>

	* fixed error handling in _enumerate_ causing segfault

2008-04-07  Mark Ellis <mark@mpellis.org.uk>

	* added dir enumeration (listing) and file reading

2008-04-05  Mark Ellis <mark@mpellis.org.uk>

	* initial code
