@@ -1,0 +1,89 @@
+NULL =
+
+mountdir = $(datadir)/gvfs/mounts
+
+INCLUDES =					\
+	-I$(top_srcdir)				\
+	-I$(top_srcdir)/common			\
+	-I$(top_srcdir)/daemon			\
+	-I$(top_builddir)			\
+	$(GLIB_CFLAGS) $(DBUS_CFLAGS) 		\
+	$(XML_CFLAGS)		\
+	$(KEYRING_CFLAGS)			\
+	-DDBUS_API_SUBJECT_TO_CHANGE		\
+	-DLIBEXEC_DIR=\"$(libexecdir)/\" 	\
+	-DMOUNTABLE_DIR=\"$(mountdir)/\" 	\
+	-DGVFS_LOCALEDIR=\""$(localedir)"\"     \
+	-DG_DISABLE_DEPRECATED
+
+noinst_LTLIBRARIES=libdaemon.la
+
+libraries =						\
+	libdaemon.la					\
+	-lgvfscommon		\
+	$(GLIB_LIBS) $(DBUS_LIBS) $(KEYRING_LIBS)
+
+%.mount: %.mount.in ../config.log
+	sed -e "s|\@libexecdir\@|$(libexecdir)|" $< > $@
+
+libexec_PROGRAMS=gvfsd-synce
+mount_in_files = synce.mount.in
+mount_DATA =  synce.mount
+
+EXTRA_DIST = $(mount_in_files)
+DISTCLEANFILES = $(mount_DATA)
+
+libdaemon_la_SOURCES = \
+	gvfsdaemon.c gvfsdaemon.h \
+	gvfsbackend.c gvfsbackend.h \
+	gvfschannel.c gvfschannel.h \
+	gvfsreadchannel.c gvfsreadchannel.h \
+	gvfswritechannel.c gvfswritechannel.h \
+	gvfsmonitor.c gvfsmonitor.h \
+	gvfsdaemonutils.c gvfsdaemonutils.h \
+	gvfsjob.c gvfsjob.h \
+	gvfsjobsource.c gvfsjobsource.h \
+	gvfsjobdbus.c gvfsjobdbus.h \
+	gvfsjobmount.c gvfsjobmount.h \
+	gvfsjobunmount.c gvfsjobunmount.h \
+	gvfsjobmountmountable.c gvfsjobmountmountable.h \
+	gvfsjobunmountmountable.c gvfsjobunmountmountable.h \
+	gvfsjobopenforread.c gvfsjobopenforread.h \
+	gvfsjobread.c gvfsjobread.h \
+	gvfsjobseekread.c gvfsjobseekread.h \
+	gvfsjobcloseread.c gvfsjobcloseread.h \
+	gvfsjobopenforwrite.c gvfsjobopenforwrite.h \
+	gvfsjobwrite.c gvfsjobwrite.h \
+	gvfsjobseekwrite.c gvfsjobseekwrite.h \
+	gvfsjobclosewrite.c gvfsjobclosewrite.h \
+	gvfsjobqueryinfo.c gvfsjobqueryinfo.h \
+	gvfsjobqueryfsinfo.c gvfsjobqueryfsinfo.h \
+	gvfsjobenumerate.c gvfsjobenumerate.h \
+	gvfsjobsetdisplayname.c gvfsjobsetdisplayname.h \
+	gvfsjobtrash.c gvfsjobtrash.h \
+	gvfsjobdelete.c gvfsjobdelete.h \
+	gvfsjobcopy.c gvfsjobcopy.h \
+	gvfsjobupload.c gvfsjobupload.h \
+	gvfsjobmove.c gvfsjobmove.h \
+	gvfsjobmakedirectory.c gvfsjobmakedirectory.h \
+	gvfsjobmakesymlink.c gvfsjobmakesymlink.h \
+	gvfsjobsetattribute.c gvfsjobsetattribute.h \
+	gvfsjobqueryattributes.c gvfsjobqueryattributes.h \
+	gvfsjobcreatemonitor.c gvfsjobcreatemonitor.h \
+	dbus-gmain.h dbus-gmain.c \
+	gvfskeyring.h gvfskeyring.c \
+        $(NULL)
+
+gvfsd_synce_SOURCES = \
+	gvfsbackendsynce.c gvfsbackendsynce.h \
+	daemon-main.c daemon-main.h \
+	daemon-main-generic.c 
+
+gvfsd_synce_CPPFLAGS = \
+	-DBACKEND_HEADER=gvfsbackendsynce.h \
+	-DDEFAULT_BACKEND_TYPE=synce \
+	-DMAX_JOB_THREADS=1 \
+	$(LIBRAPI2_CFLAGS) \
+	-DBACKEND_TYPES='"synce", G_VFS_TYPE_BACKEND_SYNCE,'
+
+gvfsd_synce_LDADD = $(libraries) $(LIBRAPI2_LIBS)
